[gd_scene load_steps=12 format=2]

[ext_resource path="res://Game/Minigames/ClickAtTheRightTime/ClickAtTheRightTime.gd" type="Script" id=1]
[ext_resource path="res://Game/Minigames/ClickAtTheRightTime/triangle.png" type="Texture" id=2]
[ext_resource path="res://Game/Minigames/ClickAtTheRightTime/blind.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.572549, 0.160784, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.890196, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.639216, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[node name="ClickAtTheRightTime" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 500 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.105882, 0.0588235, 0.258824, 1 )

[node name="GameScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="GameScreen"]
anchor_left = 0.05
anchor_top = 0.5
anchor_right = 0.95
anchor_bottom = 0.5
margin_top = -40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 3 )

[node name="Panel2" type="Panel" parent="GameScreen/Panel"]
anchor_left = 0.571
anchor_right = 0.834
anchor_bottom = 1.0
margin_left = -3.05176e-05
margin_right = -3.05176e-05
custom_styles/panel = SubResource( 4 )

[node name="Panel" type="Panel" parent="GameScreen/Panel"]
anchor_left = 0.624
anchor_right = 0.78
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )

[node name="Panel3" type="Panel" parent="GameScreen/Panel"]
anchor_left = 0.32
anchor_right = 0.38
anchor_bottom = 1.0
custom_styles/panel = SubResource( 7 )

[node name="FailZone" type="Panel" parent="GameScreen/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
custom_styles/panel = SubResource( 8 )

[node name="Cursor" type="Panel" parent="GameScreen/Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -49.0
margin_right = 10.0
margin_bottom = 12.0
custom_styles/panel = SubResource( 6 )

[node name="BlindText" type="TextureRect" parent="GameScreen/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = 67.0
margin_right = 32.0
margin_bottom = 131.0
texture = ExtResource( 3 )

[node name="ProgressBar" type="ProgressBar" parent="GameScreen"]
anchor_left = 0.35
anchor_top = 0.5
anchor_right = 0.65
anchor_bottom = 0.5
margin_top = 163.0
margin_bottom = 193.0
rect_min_size = Vector2( 0, 30 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 1.0
value = 0.37
percent_visible = false

[node name="Label" type="Label" parent="GameScreen/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Time"
align = 1
valign = 1

[node name="StreakLabel" type="Label" parent="GameScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_bottom = -10.0
valign = 2

[node name="ClickStealer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="StartMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu/CenterContainer"]
margin_left = 500.0
margin_top = 326.0
margin_right = 779.0
margin_bottom = 394.0

[node name="Label" type="Label" parent="StartMenu/CenterContainer/VBoxContainer"]
margin_right = 279.0
margin_bottom = 14.0
text = "Click when the arrow will be in the red zone"

[node name="Button" type="Button" parent="StartMenu/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 279.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 50 )
text = "Begin"

[connection signal="gui_input" from="ClickStealer" to="." method="_on_ClickAtTheRightTime_gui_input"]
[connection signal="pressed" from="StartMenu/CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
